--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
     <section class="details">
       <h1>Introduction</h1>
       <p>I'm learning to be a software developer</p>
-      <h1>I'm From Bellevue, WA</h1>
-      <p>Details here...</p>
-      <h1>I love to be outside! Trail running and skiing are my favorite activities</h1>
-      <p>Details here...</p>
-      <h1>I'm still trying to figure out my dream job...</h1>
-      <p>Details here...</p>
-      <h1>I live in Seattle</h1>
-      <p>Details here...</p>
-      <h1>I want to be a developer to understand technology better!</h1>
-      <p>Details here...</p>
+      <h1>Where are you from?</h1>
+      <p>I'm From Bellevue, WA</p>
+      <h1>What are your favorite hobbies?</h1>
+      <p>I love to be outside! Trail running and skiing are my favorite activities</p>
+      <h1>What is your dream job?.</h1>
+      <p>I'm still trying to figure out my dream job..</p>
+      <h1>Where do you live?</h1>
+      <p>I live in Seattle</p>
+      <h1>Why do you want to be a software developer?</h1>
+      <p>I want to be a developer to understand technology better!</p>
     </section>
 
     <footer id="footer">
